deploy: QuantumPL/site@8616613eb3a78b8279bb4dfa232697220b9c4d12

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -157,7 +157,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <div>
 <h2><a href=/bib/publication/Zhao2020/>Quantum Software Engineering: Landscapes and Horizons</a></h2>
 <div class=article-style>
-Quantum software plays a critical role in exploiting the full potential of quantum computing systems. As a result, it has been drawing increasing attention recently. This paper defines the term \"quantum software engineering\" and introduces a …
+Quantum software plays a critical role in exploiting the full potential of quantum computing systems. As a result, it has been drawing increasing attention recently. This paper defines the term "quantum software engineering" and introduces a quantum …
 </div>
 </div>
 <div>
