deploy: QuantumPL/site@6e54cacaecb2384f1e61bd0c03e9c0ed4e16e6ad

--- a/404.html
+++ b/404.html
@@ -120,16 +120,16 @@
 <p>Perhaps you were looking for one of these?</p>
 <h2>Latest</h2>
 <ul>
+<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
+<li><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/post/>Posts</a></li>
 <li><a href=/bib/post/pronunciation-guide/>A Quantum PL Pronunciation Guide</a></li>
 <li><a href=/bib/post/eoy-2021-updates/>End of Year 2021 Updates</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
-<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
-<li><a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a></li>
-<li><a href=/bib/about/>About</a></li>
 </ul>
 </div>
 </div>
