--- a/index.html
+++ b/index.html
@@ -155,6 +155,27 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Xuan-Bach-Le/>Xuan-Bach Le</a></span>, <span>
+<a href=/bib/author/Shang-Wei-Lin/>Shang-Wei Lin</a></span>, <span>
+<a href=/bib/author/Jun-Sun/>Jun Sun</a></span>, <span>
+<a href=/bib/author/David-Sanan/>David Sanan</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Le2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498697 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Chris-Heunen/>Chris Heunen</a></span>, <span>
 <a href=/bib/author/Robin-Kaarsgaard/>Robin Kaarsgaard</a></span>
 </span>
@@ -168,11 +189,53 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498663 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
-arXiv
-</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/rkaarsgaard/upi target=_blank rel=noopener>
 URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Xiaodong-Jia/>Xiaodong Jia</a></span>, <span>
+<a href=/bib/author/Andre-Kornell/>Andre Kornell</a></span>, <span>
+<a href=/bib/author/Bert-Lindenhovius/>Bert Lindenhovius</a></span>, <span>
+<a href=/bib/author/Michael-Mislove/>Michael Mislove</a></span>, <span>
+<a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Jia2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498687 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
+<a href=/bib/author/Christopher-McNally/>Christopher McNally</a></span>, <span>
+<a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yuan2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
+DOI
 </a>
 </p>
 </div>
@@ -194,67 +257,6 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2008.06812 target=_blank rel=noopener>
-arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
-<a href=/bib/author/Li-Zhou/>Li Zhou</a></span>, <span>
-<a href=/bib/author/Yangjia-Li/>Yangjia Li</a></span>, <span>
-<a href=/bib/author/Yuan-Feng/>Yuan Feng</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a>.
-<em>Theoretical Computer Science</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Ying2021a/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/j.tcs.2021.10.025 target=_blank rel=noopener>
-DOI
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
-<a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a>.
-<em>41st IARCS Annual Conference on Foundations of Software Technology and Theoretical Computer Science (FSTTCS 2021)</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Lee2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.FSTTCS.2021.51 target=_blank rel=noopener>
-DOI
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Marco-Lewis/>Marco Lewis</a></span>, <span>
-<a href=/bib/author/Sadegh-Soudjani/>Sadegh Soudjani</a></span>, <span>
-<a href=/bib/author/Paolo-Zuliani/>Paolo Zuliani</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Lewis2021/>Formal Verification of Quantum Programs: Theory, Tools and Challenges</a>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Lewis2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.01320 target=_blank rel=noopener>
 arXiv
 </a>
 </p>
@@ -354,13 +356,13 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
 <a href=/bib/tag/formal-verification/ style=font-size:.7rem>formal verification</a>
-<a href=/bib/tag/hoare-logic/ style=font-size:1.1768767391231096rem>hoare logic</a>
-<a href=/bib/tag/programming-languages/ style=font-size:1.1768767391231096rem>programming languages</a>
+<a href=/bib/tag/hoare-logic/ style=font-size:1.1615840568448625rem>hoare logic</a>
+<a href=/bib/tag/programming-languages/ style=font-size:1.1615840568448625rem>programming languages</a>
 <a href=/bib/tag/quantum-circuits/ style=font-size:.7rem>quantum circuits</a>
-<a href=/bib/tag/quantum-computation/ style=font-size:1.3531307859192463rem>quantum computation</a>
-<a href=/bib/tag/quantum-computing/ style=font-size:1.9550965527929411rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.1768767391231096rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.8408852011721283rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-computation/ style=font-size:1.332185915314798rem>quantum computation</a>
+<a href=/bib/tag/quantum-computing/ style=font-size:1.9583110574898708rem>quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.2504433185168522rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.8363672357473646rem>quantum programming languages</a>
 </div>
 </div>
 </div>
