--- a/publication/Abramsky2008/index.html
+++ b/publication/Abramsky2008/index.html
@@ -190,8 +190,8 @@ Book section
 <li><a href=/bib/publication/Abramsky2004/>A Categorical Semantics of Quantum Protocols</a></li>
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
