--- a/publication/Mosca2019/index.html
+++ b/publication/Mosca2019/index.html
@@ -168,11 +168,11 @@ URL
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
