--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -119,9 +119,27 @@
 </div>
 <div class=universal-wrapper>
 <div>
+<h2><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></h2>
+<div class=article-style>
+It is well-known that quantum programs are not only complicated to design but also challenging to verify because the quantum states can have exponential size and require sophisticated mathematics to encode and manipulate. To tackle the state-space …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></h2>
 <div class=article-style>
 We study the two dual quantum information effects to manipulate the amount of information in quantum computation: hiding and allocation. The resulting type-and-effect system is fully expressive for irreversible quantum computing, including …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></h2>
+<div class=article-style>
+We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed for variational quantum programming, which is a hybrid classical-quantum computational paradigm. The classical …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></h2>
+<div class=article-style>
+Quantum programming languages enable developers to implement algorithms for quantum computers that promise computational breakthroughs in classically intractable tasks. Programming quantum computers requires awareness of entanglement, the phenomenon …
 </div>
 </div>
 <div>
