--- a/publication/Bichsel2020/index.html
+++ b/publication/Bichsel2020/index.html
@@ -182,6 +182,7 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
