--- a/publication/Bordg2021/index.html
+++ b/publication/Bordg2021/index.html
@@ -185,11 +185,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
-<li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
 </ul>
 </div>
 </div>
