--- a/publication/Feng2021/index.html
+++ b/publication/Feng2021/index.html
@@ -180,10 +180,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
+<li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
-<li><a href=/bib/publication/Unruh2019/>Quantum Relational Hoare Logic</a></li>
 </ul>
 </div>
 </div>
