--- a/publication/index.html
+++ b/publication/index.html
@@ -194,6 +194,75 @@ Software
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a>
+</div>
+<a href=/bib/publication/Yuan2022/ class=summary-link>
+<div class=article-style>
+Quantum programming languages enable developers to implement algorithms for quantum computers that promise computational breakthroughs …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
+<a href=/bib/author/Christopher-McNally/>Christopher McNally</a></span>, <span>
+<a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yuan2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Jia2022/>Semantics for Variational Quantum Programming</a>
+</div>
+<a href=/bib/publication/Jia2022/ class=summary-link>
+<div class=article-style>
+We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Xiaodong-Jia/>Xiaodong Jia</a></span>, <span>
+<a href=/bib/author/Andre-Kornell/>Andre Kornell</a></span>, <span>
+<a href=/bib/author/Bert-Lindenhovius/>Bert Lindenhovius</a></span>, <span>
+<a href=/bib/author/Michael-Mislove/>Michael Mislove</a></span>, <span>
+<a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Jia2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498687 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Heunen2022/>Quantum Information Effects</a>
 </div>
 <a href=/bib/publication/Heunen2022/ class=summary-link>
@@ -215,11 +284,41 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498663 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
-arXiv
-</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/rkaarsgaard/upi target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a>
+</div>
+<a href=/bib/publication/Le2022/ class=summary-link>
+<div class=article-style>
+It is well-known that quantum programs are not only complicated to design but also challenging to verify because the quantum states can …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Xuan-Bach-Le/>Xuan-Bach Le</a></span>, <span>
+<a href=/bib/author/Shang-Wei-Lin/>Shang-Wei Lin</a></span>, <span>
+<a href=/bib/author/Jun-Sun/>Jun Sun</a></span>, <span>
+<a href=/bib/author/David-Sanan/>David Sanan</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Le2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498697 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
