--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -136,6 +136,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=/bib/publication/Yuan2022/appendix.pdf>
+Appendix
+</a>
 </div>
 </div>
 <div class=article-container>
@@ -168,7 +171,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>POPL &lsquo;22. Appendix missing.</p>
+<div class=article-style><p>POPL &lsquo;22. Also see <a href="https://dl.acm.org/action/downloadSupplement?doi=10.1145%2F3498691&file=popl22main-p167-p-archive.zip" target=_blank rel=noopener>the associated appendix</a>.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/entanglement/>entanglement</a>
