deploy: QuantumPL/site@d7806f86e7d0fa798282419b90784428f379d6a1

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv
+arXiv (extended version)
 </a>
 </p>
 </div>
@@ -364,7 +364,7 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 <a href=/bib/tag/quantum-circuits/ style=font-size:.7rem>quantum circuits</a>
 <a href=/bib/tag/quantum-computation/ style=font-size:1.332185915314798rem>quantum computation</a>
 <a href=/bib/tag/quantum-computing/ style=font-size:1.9583110574898708rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.2504433185168522rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.1615840568448625rem>quantum programming</a>
 <a href=/bib/tag/quantum-programming-languages/ style=font-size:.8363672357473646rem>quantum programming languages</a>
 </div>
 </div>
