--- a/publication/Jia2022/index.html
+++ b/publication/Jia2022/index.html
@@ -139,7 +139,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv
+arXiv (extended version)
 </a>
 </div>
 </div>
@@ -183,7 +183,6 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Bichsel2020/>Silq: A High-Level Quantum Language with Safe Uncomputation and Intuitive Semantics</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
