--- a/publication/index.html
+++ b/publication/index.html
@@ -254,7 +254,7 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv
+arXiv (extended version)
 </a>
 </div>
 </div>
@@ -621,40 +621,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.MFCS.2021.30 target=_blank rel=noopener>
 DOI
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a>
-</div>
-<a href=/bib/publication/Jia2021/ class=summary-link>
-<div class=article-style>
-We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Xiaodong-Jia/>Xiaodong Jia</a></span>, <span>
-<a href=/bib/author/Andre-Kornell/>Andre Kornell</a></span>, <span>
-<a href=/bib/author/Bert-Lindenhovius/>Bert Lindenhovius</a></span>, <span>
-<a href=/bib/author/Michael-Mislove/>Michael Mislove</a></span>, <span>
-<a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Jia2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
-arXiv
 </a>
 </div>
 </div>
