deploy: QuantumPL/site@24f56a123f9035712ced2efbba0c9a9fcdbf81da

--- a/event/pop22/index.html
+++ b/event/pop22/index.html
@@ -167,7 +167,7 @@ Jan 20, 2022 9:20 AM &mdash; 11:00 AM
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style>
-<p>There are four interesting quantum PL and verification related papers being presented at POPL 2022 next week:</p>
+<p>There are four interesting quantum PL and verification related papers being presented at POPL 2022:</p>
 <ul>
 <li><a href=../../publication/Heunen2022>Quantum Information Effects</a> by Robin Kaarsgaard, Chris Heunen</li>
 <li><a href=../../publication/Yuan2022>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a> by Charles Yuan, Christopher McNally, Michael Carbin</li>
