deploy: QuantumPL/site@cb8b8a1ad435cd68add5640c1165960a3fbb232c

--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -141,6 +141,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1007/978-3-030-72019-3_6 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2003.05841 target=_blank rel=noopener>
+arXiv (extended version)
+</a>
 </div>
 </div>
 <div class=article-container>
@@ -173,7 +176,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>See extended version [<a href=../Chareton2020>Chareton2020</a>] for additional technical material.</p>
+<div class=article-style><p>See extended version for additional technical material.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/deductive-verification/>deductive verification</a>
