--- a/publication/index.html
+++ b/publication/index.html
@@ -877,6 +877,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-72019-3_6 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2003.05841 target=_blank rel=noopener>
+arXiv (extended version)
+</a>
 </div>
 </div>
 <div class=ml-3>
@@ -941,6 +944,9 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3434318 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/1912.02250 target=_blank rel=noopener>
+arXiv (with appendix)
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
 URL
@@ -1253,40 +1259,6 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2005.08396 target=_blank rel=noopener>
-arXiv
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2020">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Chareton2020/>A Deductive Verification Framework for Circuit-Building Quantum Programs</a>
-</div>
-<a href=/bib/publication/Chareton2020/ class=summary-link>
-<div class=article-style>
-While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
-<a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
-<a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
-<a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Chareton2020/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2003.05841 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
