deploy: QuantumPL/site@18bf64db14df14cd9839b0356eaf09739e504cb1

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -398,6 +398,12 @@ We study quantum information and computation from a novel point of view. Our app
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Svore2004/>Toward a Software Architecture for Quantum Computing Design Tools</a></h2>
+<div class=article-style>
+Compilers and computer-aided design tools will be essential for quantum computing. We present a computer-aided design flow that transforms a high-level language program representing a quantum computing algorithm into a technology-specific …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></h2>
 <div class=article-style>
 This article is a brief and subjective survey of quantum programming language research.
