--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -320,6 +320,12 @@ We develop a notion of predicate transformer and, in particular, the weakest pre
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Svore2006/>A Layered Software Architecture for Quantum Computing Design Tools</a></h2>
+<div class=article-style>
+Compilers and computer-aided design tools are essential for fine-grained control of nanoscale quantum-mechanical systems. A proposed four-phase design flow assists with computations by transforming a quantum algorithm from a high-level language …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Selinger2004a/>Towards a Quantum Programming Language</a></h2>
 <div class=article-style>
 We propose the design of a programming language for quantum computing. Traditionally, quantum algorithms are frequently expressed at the hardware level, for instance in terms of the quantum circuit model or quantum Turing machines. These approaches …
