deploy: QuantumPL/site@086fd6f354d0b0badfa474713c635c07db5775f0

--- a/publication/Baez2010/index.html
+++ b/publication/Baez2010/index.html
@@ -185,6 +185,7 @@ Book section
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></li>
 <li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
 </ul>
 </div>
 </div>
