--- a/publication/Heunen2022/index.html
+++ b/publication/Heunen2022/index.html
@@ -188,10 +188,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 <li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
-<li><a href=/bib/publication/Rennela2018/>Classical Control and Quantum Circuits in Enriched Category Theory</a></li>
 </ul>
 </div>
 </div>
