--- a/publication/Selinger2004/index.html
+++ b/publication/Selinger2004/index.html
@@ -183,11 +183,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
 <li><a href=/bib/publication/DalLago2017/>The Geometry of Parallelism: Classical, Probabilistic, and Quantum Effects</a></li>
-<li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
-<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
+<li><a href=/bib/publication/Vizzotto2009a/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
 </div>
 </div>
