--- a/publication/index.html
+++ b/publication/index.html
@@ -3644,9 +3644,9 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a>
+<a href=/bib/publication/Vizzotto2009a/>Reasoning about General Quantum Programs over Mixed States</a>
 </div>
-<a href=/bib/publication/Vizzotto2009/ class=summary-link>
+<a href=/bib/publication/Vizzotto2009a/ class=summary-link>
 <div class=article-style>
 In this work we present a functional programming language for quantum computation over mixed states. More interestingly, we develop a …
 </div>
@@ -3660,7 +3660,7 @@ In this work we present a functional programming language for quantum computatio
 </div>
 </div>
 <div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vizzotto2009/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vizzotto2009a/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-642-10452-7_22 target=_blank rel=noopener>
@@ -3798,6 +3798,38 @@ In this chapter, we present applications of abstract interpretation techniques i
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313.007 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2009">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a>
+</div>
+<a href=/bib/publication/Vizzotto2009/ class=summary-link>
+<div class=article-style>
+We express quantum computations (with measurements) using the arrow calculus extended with monadic constructions. This framework …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>, <span>
+<a href=/bib/author/Andre-Rauber-Du-Bois/>André Rauber Du Bois</a></span>, <span>
+<a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vizzotto2009/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-642-02261-6_30 target=_blank rel=noopener>
 DOI
 </a>
 </div>
