--- a/publication/DalLago2017/index.html
+++ b/publication/DalLago2017/index.html
@@ -190,8 +190,8 @@ Conference paper
 <li><a href=/bib/publication/Selinger2004/>A Brief Survey of Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/publication/Hasuo2017/>Semantics of higher-order quantum computation via geometry of interaction</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
