--- a/publication/Jorrand2009/index.html
+++ b/publication/Jorrand2009/index.html
@@ -171,6 +171,15 @@ Book section
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/abstract-interpretation/>abstract interpretation</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
