--- a/publication/Le2022/index.html
+++ b/publication/Le2022/index.html
@@ -178,15 +178,16 @@ Journal article
 <a class="badge badge-light" href=/bib/tag/verification/>verification</a>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/formal-semantics/>formal semantics</a>
+<a class="badge badge-light" href=/bib/tag/separation-logic/>separation logic</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
+<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
-<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
