--- a/publication/Vizzotto2006/index.html
+++ b/publication/Vizzotto2006/index.html
@@ -175,6 +175,16 @@ Journal article
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/arrows/>arrows</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
