deploy: QuantumPL/site@8c718b83f872c08637da86de60b6ed15eae2f89f

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=/bib/publication/Yuan2022/appendix.pdf>
-Appendix
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
+URL
 </a>
 </p>
 </div>
