--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -139,8 +139,8 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3498691 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=/bib/publication/Yuan2022/appendix.pdf>
-Appendix
+<a class="btn btn-outline-primary btn-page-header" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
