deploy: QuantumPL/site@33408e34dfe91144a9ee29a4e46e68f662a48a41

--- a/index.html
+++ b/index.html
@@ -158,6 +158,27 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Xuan-Bach-Le/>Xuan-Bach Le</a></span>, <span>
+<a href=/bib/author/Shang-Wei-Lin/>Shang-Wei Lin</a></span>, <span>
+<a href=/bib/author/Jun-Sun/>Jun Sun</a></span>, <span>
+<a href=/bib/author/David-Sanan/>David Sanan</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Le2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498697 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Chris-Heunen/>Chris Heunen</a></span>, <span>
 <a href=/bib/author/Robin-Kaarsgaard/>Robin Kaarsgaard</a></span>
 </span>
@@ -222,26 +243,8 @@ DOI
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
 URL
 </a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Xuan-Bach-Le/>Xuan-Bach Le</a></span>, <span>
-<a href=/bib/author/Shang-Wei-Lin/>Shang-Wei Lin</a></span>, <span>
-<a href=/bib/author/Jun-Sun/>Jun Sun</a></span>, <span>
-<a href=/bib/author/David-Sanan/>David Sanan</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a>.
-<em>Proceedings of the ACM on Programming Languages</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Le2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3498697 target=_blank rel=noopener>
-DOI
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/bib/publication/Yuan2022/appendix.pdf>
+Appendix
 </a>
 </p>
 </div>
