--- a/publication/Yuan2022/index.html
+++ b/publication/Yuan2022/index.html
@@ -142,6 +142,9 @@ DOI
 <a class="btn btn-outline-primary btn-page-header" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
 URL
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=/bib/publication/Yuan2022/appendix.pdf>
+Appendix
+</a>
 </div>
 </div>
 <div class=article-container>
