--- a/publication/index.html
+++ b/publication/index.html
@@ -222,6 +222,9 @@ DOI
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/twist-popl22 target=_blank rel=noopener>
 URL
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=/bib/publication/Yuan2022/appendix.pdf>
+Appendix
+</a>
 </div>
 </div>
 <div class=ml-3>
@@ -359,6 +362,41 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2008.06812 target=_blank rel=noopener>
 arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Dandy2021/>Qimaera: Type-safe (Variational) Quantum Programming in Idris</a>
+</div>
+<a href=/bib/publication/Dandy2021/ class=summary-link>
+<div class=article-style>
+Variational Quantum Algorithms are hybrid classical-quantum algorithms where classical and quantum computation work in tandem to solve …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Liliane-Joy-Dandy/>Liliane-Joy Dandy</a></span>, <span>
+<a href=/bib/author/Emmanuel-Jeandel/>Emmanuel Jeandel</a></span>, <span>
+<a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Dandy2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2111.10867 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/zamdzhiev/Qimaera target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
