--- a/publication/Le2022/index.html
+++ b/publication/Le2022/index.html
@@ -183,11 +183,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
+<li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Gay2005/>Communicating Quantum Processes</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
