--- a/publication/Singhal2020a/index.html
+++ b/publication/Singhal2020a/index.html
@@ -174,6 +174,7 @@ Thesis
 <a class="badge badge-light" href=/bib/tag/pre-and-postconditions/>pre- and postconditions</a>
 <a class="badge badge-light" href=/bib/tag/program-specifications/>program specifications</a>
 <a class="badge badge-light" href=/bib/tag/hoare-logic/>hoare logic</a>
+<a class="badge badge-light" href=/bib/tag/separation-logic/>separation logic</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
