--- a/publication/Singhal2021a/index.html
+++ b/publication/Singhal2021a/index.html
@@ -185,6 +185,7 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/pre-and-postconditions/>pre- and postconditions</a>
 <a class="badge badge-light" href=/bib/tag/program-specifications/>program specifications</a>
 <a class="badge badge-light" href=/bib/tag/hoare-logic/>hoare logic</a>
+<a class="badge badge-light" href=/bib/tag/separation-logic/>separation logic</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
@@ -193,7 +194,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 </ul>
 </div>
 </div>
