deploy: QuantumPL/site@fa8031a21b93826c6e659c4c72a5a228441ab494

--- a/publication/index.html
+++ b/publication/index.html
@@ -673,6 +673,37 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Li2021/>Quantum Relational Hoare Logic with Expectations</a>
+</div>
+<a href=/bib/publication/Li2021/ class=summary-link>
+<div class=article-style>
+We present a variant of the quantum relational Hoare logic from (Unruh, POPL 2019) that allows us to use "expectations" in …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Yangjia-Li/>Yangjia Li</a></span>, <span>
+<a href=/bib/author/Dominique-Unruh/>Dominique Unruh</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Li2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.ICALP.2021.136 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a>
 </div>
 <a href=/bib/publication/Zhou2021/ class=summary-link>
