--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -152,6 +152,12 @@ We propose a model of the substructural logic of Bunched Implications (BI) that 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Li2021/>Quantum Relational Hoare Logic with Expectations</a></h2>
+<div class=article-style>
+We present a variant of the quantum relational Hoare logic from (Unruh, POPL 2019) that allows us to use \"expectations\" in pre- and postconditions. That is, when reasoning about pairs of programs, our logic allows us to quantitatively reason about …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></h2>
 <div class=article-style>
 As quantum computing progresses steadily from theory into practice, programmers will face a common problem: How can they be sure that their code does what they intend it to do? This paper presents encouraging results in the application of mechanized …
