--- a/publication/Unruh2019/index.html
+++ b/publication/Unruh2019/index.html
@@ -179,11 +179,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Li2021/>Quantum Relational Hoare Logic with Expectations</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 </ul>
 </div>
 </div>
