deploy: QuantumPL/site@8b3f2ba7e19c48d65d0d688c71782c710ae317da

--- a/publication/Knill1996/index.html
+++ b/publication/Knill1996/index.html
@@ -131,6 +131,9 @@ June 1996
 </span>
 </div>
 <div class="btn-links mb-3">
+<a class="btn btn-outline-primary btn-page-header" href=/bib/publication/Knill1996/Knill1996.pdf target=_blank rel=noopener>
+PDF
+</a>
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Knill1996/cite.bib>
 Cite
 </a>
