deploy: QuantumPL/site@cffe6c04c1e0c19e0937791c51d2474b9378480c

--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -218,6 +218,12 @@ We formalize the theory of quantum Hoare logic (QHL) [TOPLAS 33(6),19], an exten
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a></h2>
+<div class=article-style>
+Quantum programming is hard: Quantum programs are necessarily probabilistic and impossible to examine without disrupting the execution of a program. In response to this challenge, we and a number of other researchers have written tools to verify …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Zhou2019/>An Applied Quantum Hoare Logic</a></h2>
 <div class=article-style>
 We derive a variant of quantum Hoare logic (QHL), called applied quantum Hoare logic (aQHL for short), by: 1. restricting QHL to a special class of preconditions and postconditions, namely projections, which can significantly simplify verification of …
