--- a/publication/index.html
+++ b/publication/index.html
@@ -1572,6 +1572,38 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a>
+</div>
+<a href=/bib/publication/Rand2019a/ class=summary-link>
+<div class=article-style>
+Quantum programming is hard: Quantum programs are necessarily probabilistic and impossible to examine without disrupting the execution …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
+<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
+<a href=/bib/author/Michael-Hicks/>Michael Hicks</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2019a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.SNAPL.2019.12 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2019">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Liu2019/>Formal Verification of Quantum Algorithms Using Quantum Hoare Logic</a>
 </div>
 <a href=/bib/publication/Liu2019/ class=summary-link>
@@ -2191,7 +2223,7 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Paykin2018/>Linear/non-Linear Types For Embedded Domain-Specific Languages</a>
+<a href=/bib/publication/Paykin2018/>Linear/Non-Linear Types for Embedded Domain-Specific Languages</a>
 </div>
 <a href=/bib/publication/Paykin2018/ class=summary-link>
 <div class=article-style>
