--- a/publication/Paykin2019/index.html
+++ b/publication/Paykin2019/index.html
@@ -144,7 +144,7 @@ arXiv
 <h3>Abstract</h3>
 <p class=pub-abstract>This paper presents an equational theory for the QRAM model of quantum computation, formulated as an embedded language inside of homotopy type theory. The embedded language approach is highly expressive, and reflects the style of state-of-the art quantum languages like Quipper and QWIRE. The embedding takes advantage of features of homotopy type theory to encode unitary transformations as higher inductive paths, simplifying the presentation of an equational theory. We prove that this equational theory is sound and complete with respect to established models of quantum computation.</p>
 <div class=space-below></div>
-<div class=article-style><p>Talk at QPL &lsquo;19</p>
+<div class=article-style><p>QPL &lsquo;19</p>
 </div>
 </div>
 </div>
